trying to put paths in .jar spot.

--- a/build.gradle
+++ b/build.gradle
@@ -105,3 +105,11 @@ spotless {
     eclipse().configFile 'frc4905.eclipseformat.xml'   // XML file dumped out by the Eclipse formatter
   }
 }
+
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/deploy"
+        }
+    }
+}
