add sensor/distance values to table

--- a/src/main/deploy/robotConfigs/4905_Romi2/sensors.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/sensors.conf
@@ -1,3 +1,17 @@
 RomiGyro {
     
 }
+sensors {
+    romiAnalogIRSensor {
+        sensorValueToDistanceInches = [
+            1, 2200,
+            2, 1700,
+            3, 1200,
+            4, 900,
+            5, 750,
+            6, 640,
+            7, 500,
+            8, 470
+        ]
+    }
+}
