we added the code to change the elevation of the cannon. also, cleaned up manual Adjust of shooter.

--- a/src/main/deploy/robotConfigs/ShowBot/cannon.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/cannon.conf
@@ -15,4 +15,10 @@
         forwardChannel=4
         reverseChannel=3
     }
+     elevationMotor=5
  }
+elevationMotor {
+    hasEncoder=false
+    brakeMode=true
+    inverted=true
+}
