--- a/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
@@ -24,8 +24,8 @@ gyrocorrect {
     kproportion=0.022
 }
 teleop {
-    forwardbackslowscale = 0.4
-    rotateslowscale = 0.4
+    forwardbackslowscale = 1.0
+    rotateslowscale = 0.82
 }
 
 pathplanningconstants {
@@ -41,3 +41,7 @@ pathplanningconstants {
 }
 
 rightSideInverted=true
+
+combineHarvesterServo {
+    port = 4
+}
