we added code to determine if we are running on the show bot.

--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -59,6 +59,6 @@ pathplanningconstants {
     kRamseteZeta = 0.7
 }
 
-rightSideInverted=false
+rightSideInverted=true
 ticksPerInch=29.4
 motorController=sparkMax
