Removed unnecassary config files for showbot, and added basics for the cannon safety ultrasonic sensor. Currently code is crashing on LED configuration

--- a/src/main/deploy/robotConfigs/ShowBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/sensors.conf
@@ -1,6 +1,13 @@
 sensors {
-    
+    cannonHomeSwitch{
+        port=2
+        reversedPolarity=false
+    }
+    cannonSafetyUltrasonic{
+        ping=3
+        echo=4
+    }
 }
 navx {
-port=MXP
+    port=MXP
 }
