Changed the // in a config file to pound signs for comments.

--- a/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
@@ -24,8 +24,8 @@ gyrocorrect {
     kproportion=0.01
 }
 teleop {
-    forwardbackslowscale = 0.9 // 1.0
-    rotateslowscale = 0.85 // 0.80
+    forwardbackslowscale = 0.9 #1.0
+    rotateslowscale = 0.85 #0.80
     controllerDeadband = 0.01
 }
 
