code to track a line

--- a/src/main/deploy/robotConfigs/4905_Romi2/sensors.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/sensors.conf
@@ -3,7 +3,11 @@ RomiGyro {
 }
 
 sensors {
-    colorsensor {
+    frontcolorsensor {
+        port = 2
+    }
+
+    backcolorsensor {
         port = 1
     }
 }
