line following code tuned to romi-1

--- a/src/main/deploy/robotConfigs/4905_Romi/sensors.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi/sensors.conf
@@ -1,3 +1,13 @@
 RomiGyro {
     
 }
+
+sensors {
+    frontcolorsensor {
+        port = 1
+    }
+
+    backcolorsensor {
+        port = 0
+    }
+}
