--- a/src/main/deploy/robotConfigs/4905_Romi4/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/commandconstants.conf
@@ -67,3 +67,17 @@ DefaultShooterParallelCommandGroup {
     shooteridlespeed = 0
     seriesidlespeed = 0
 }
+
+ColorSensorFront {
+    p = 0.25
+    i = 0.0
+    d = 0.035
+    setpoint = 4.02
+}
+
+ColorSensorBack {
+    p = 0.25
+    i = 0.0
+    d = 0.035
+    setpoint = 3.86
+}
