Added config file stuff to romi4 for the wings and color sensor

--- a/src/main/deploy/robotConfigs/4905_Romi4/sensors.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/sensors.conf
@@ -1,7 +1,12 @@
 RomiGyro {   
 }
 sensors {
-    analog41IRSensor {
-        port=2
+
+    frontcolorsensor {
+        port = 1
+    }
+
+    backcolorsensor {
+        port = 0
     }
 }
