refactored line following code to allow for different speeds

--- a/src/main/deploy/robotConfigs/4905_Romi4/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/commandconstants.conf
@@ -68,6 +68,20 @@ DefaultShooterParallelCommandGroup {
     seriesidlespeed = 0
 }
 
+ColorSensorFrontFast {
+    p = 0.25
+    i = 0.0
+    d = 0.09
+    setpoint = 4.02
+}
+
+ColorSensorBackFast {
+    p = 0.25
+    i = 0.0
+    d = 0.09
+    setpoint = 3.86
+}
+
 ColorSensorFront {
     p = 0.25
     i = 0.0
