Autonomous driving for Romi 2

--- a/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
@@ -21,7 +21,7 @@ motorController=romiDrive
 
 gyrocorrect {
     kdelay=8
-    kproportion=0.022
+    kproportion=0.03
 }
 teleop {
     forwardbackslowscale = 0.4
@@ -41,6 +41,7 @@ pathplanningconstants {
 }
 
 rightSideInverted=true
+InvertFowardAndBack=true
 
 combineHarvesterServo {
     port = 4
