remove even more Droid stuff

--- a/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
@@ -24,8 +24,8 @@ gyrocorrect {
     kproportion=0.01
 }
 teleop {
-    forwardbackslowscale = 0.3 #1.0
-    rotateslowscale = 0.5 #0.80
+    forwardbackslowscale = 0.3 
+    rotateslowscale = 0.5 
     controllerDeadband = 0.01
 }
 
