--- a/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
@@ -31,8 +31,8 @@ teleop {
 pathplanningconstants {
     ksVolts = 0.3
     kvVoltSecondsPerMeter = 6.33
-    kaVoltSecondsSquaredPerMeter = 0.0 #0.0389
-    kPDriveVel = 0.0 #0.085
+    kaVoltSecondsSquaredPerMeter = 0.0 
+    kPDriveVel = 0.0 
     kTrackwidthMeters = 0.142072613
     kMaxSpeedMetersPerSecond = 0.8
     kMaxAccelerationMetersPerSecondSquared = 0.8
