so the code for moving in teleop and the moveUsingGyro methods are a mess. the delay used in the TeleOpCommand needs to be used in the TeleOpCommand and not hacked into moveUsingGyro. i don't know when this got combined, but they used to be separate. so, they're now separated. this makes moveUsingGyro methods much easier to understand. i also added a teleop kdelay (removed from moveUsingGyro) and kProportion as this kProportion can be different than the one used for the move commands. added a utility function to calculateMinimalCompassHeadingDifference since it was not being calculated properly in the code and might be needed elsewhere.

--- a/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi2/drivetrain.conf
@@ -20,12 +20,13 @@ wheelDiameterInch = 2.75591
 motorController=romiDrive
 
 gyrocorrect {
-    kdelay=8
     kproportion=0.03
 }
 teleop {
     forwardbackslowscale = 0.4
     rotateslowscale = 0.4
+    kdelay=8
+    kproportion = 0.03
 }
 
 pathplanningconstants {
