--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -37,12 +37,13 @@ backright {
     encoderTicksPerRotation=42
 }
 gyrocorrect {
-    kdelay=25
     kproportion=0.025
 }
 teleop {
     forwardbackslowscale = 0.75
     rotateslowscale = 0.5
+    kdelay=25
+    kproportion=0.025
 }
 
 pathplanningconstants {
