--- a/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
@@ -20,12 +20,13 @@ wheelDiameterInch = 2.75591
 motorController=romiDrive
 
 gyrocorrect {
-    kdelay=8
     kproportion=0.022
 }
 teleop {
     forwardbackslowscale = 0.4
     rotateslowscale = 0.4
+    kdelay=8
+    kproportion = 0.022
 }
 
 pathplanningconstants {
