--- a/.gitignore
+++ b/.gitignore
@@ -151,11 +151,15 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # # VS Code Specific Java Settings
+# DO NOT REMOVE .classpath and .project
 .classpath
 .project
 .settings/
 bin/
 imgui.ini
+
+# Simulation GUI and other tools window save file
+*-window.json
 
 # Igmore KDiff3 files
 *.orig
