fix build to support Romi simulation. fix for DifferentialDrive not supporting set...Inverted. fix SlowMode so it works properly

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ imgui.ini
 *.orig
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+
+/simgui.json
+/simgui-ds.json
