Completed implementation of the shooter.

--- a/src/main/deploy/robotConfigs/RoadKill/shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/shooter.conf
@@ -1,20 +1,52 @@
 ports{
-    shooter1=1
-    shooter2=2
+    topShooterWheel=1
+    bottomShooterWheel=2
 }
 
-shooter1{
+topShooterWheel{
     inverted=false
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+    runShooterWheelVelocity{
+        p=0
+        i=0
+        d=0
+    }
+    tolerance=100
+    shooterTargetRPMAndKValues=[
+       500, 0.000222, 
+       1000, 0.000205,
+       4000, 0.000235
+    ]
+    shooterTargetRPMandPValues=[
+        500, 0.0005,
+        1000, 0.00075
+        4000, 0.0032
+    ]
 }
 
-shooter2{
+bottomShooterWheel{
     inverted=false
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+     runShooterWheelVelocity{
+        p=0
+        i=0
+        d=0
+    }
+    tolerance=100
+    shooterTargetRPMAndKValues=[
+       500, 0.000222, 
+       1000, 0.000205,
+       4000, 0.000235
+    ]
+    shooterTargetRPMandPValues=[
+        500, 0.0005,
+        1000, 0.00075
+        4000, 0.0032
+    ]
 }
