Tuned shooter values.

--- a/src/main/deploy/robotConfigs/RoadKill/shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/shooter.conf
@@ -9,44 +9,40 @@ topShooterWheel{
     encoderInverted=false
     currentLimit=60
     brakeMode=false
-    runShooterWheelVelocity{
+    runshooterwheelvelocity{
         p=0
         i=0
         d=0
     }
     tolerance=100
     shooterTargetRPMAndKValues=[
-       500, 0.000222, 
-       1000, 0.000205,
-       4000, 0.000235
+       1000, 0.000181,
+       3000, 0.000176
     ]
     shooterTargetRPMandPValues=[
-        500, 0.0005,
-        1000, 0.00075
-        4000, 0.0032
+        1000, 0.000150,
+        3000, 0.0002
     ]
 }
 
 bottomShooterWheel{
-    inverted=false
+    inverted=true
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
     brakeMode=false
-     runShooterWheelVelocity{
+     runshooterwheelvelocity{
         p=0
         i=0
         d=0
     }
     tolerance=100
     shooterTargetRPMAndKValues=[
-       500, 0.000222, 
-       1000, 0.000205,
-       4000, 0.000235
+       1000, 0.000181,
+       3000, 0.000176
     ]
     shooterTargetRPMandPValues=[
-        500, 0.0005,
-        1000, 0.00075
-        4000, 0.0032
+        1000, 0.000150,
+        3000, 0.000170
     ]
 }
