added spark limit switches

--- a/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
@@ -11,6 +11,8 @@ frontleft {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
 backleft {
     inverted=true
@@ -19,6 +21,8 @@ backleft {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
 frontright {
     inverted=false
@@ -27,6 +31,8 @@ frontright {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
 backright {
     inverted=false
@@ -35,6 +41,8 @@ backright {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
 gyrocorrect {
     kproportion=0.025
