--- a/src/main/deploy/robotConfigs/TopGun/intake.conf
+++ b/src/main/deploy/robotConfigs/TopGun/intake.conf
@@ -10,6 +10,8 @@ wheelsController {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
 
 deployRetractController {
@@ -19,6 +21,8 @@ deployRetractController {
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
+    hasForwardLimitSwitch=true
+    hasReverseLimitSwitch=true
 }
 
 deploySpeed=0
