Added shooter subsystem to the robot config. Renamed Mock Shooter and Shooter Base. Added super to Run Shooter RPM because of ParallelCommandGroup.

--- a/src/main/deploy/robotConfigs/RoadKill/shooter.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/shooter.conf
@@ -4,7 +4,7 @@ ports{
 }
 
 topShooterWheel{
-    inverted=false
+    inverted=false   #this has the wheels turning for spitting out a ball
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
@@ -26,7 +26,7 @@ topShooterWheel{
 }
 
 bottomShooterWheel{
-    inverted=true
+    inverted=true     #this has the wheels turning for spitting out a ball
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
