--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -4,7 +4,7 @@ ports{
 }
 
 topShooterWheel{
-    inverted=false
+    inverted=true     #this has the wheels turning for taking in a ball (should be the default)
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
@@ -26,7 +26,7 @@ topShooterWheel{
 }
 
 bottomShooterWheel{
-    inverted=true
+    inverted=false    #this has the wheels turning for taking in a ball (should be the default)
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
