Starting dashboard command work

--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -1,19 +1,24 @@
-ports {
-
-}
-frontLeftWinch {
-    
-}
-
-frontRightWinch {
-
+ports { 
+    backLeftWinch = 11
+    backRightWinch = 12
 }
 
 backLeftWinch {
+    inverted = true
+    hasEncoder = true
+    encoderInverted = false
+    currentLimit = 60
+    brakeMode = true
 
 }
 
 backRightWinch {
+    inverted = true
+    hasEncoder = true
+    encoderInverted = false
+    currentLimit = 60
+    brakeMode = true
     
 }
-extendHeight = 12 
+extendHeight = 12
+contractHeight = 6 
