Created ShooterAlignment subsystem and added it to shooter config.

--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -1,6 +1,7 @@
 ports{
     topShooterWheel=6
     bottomShooterWheel=5
+    angleMotor=10
 }
 
 topShooterWheel{
@@ -35,7 +36,7 @@ bottomShooterWheel{
         p=0
         i=0
         d=0
-    }
+     }
     tolerance=100
     shooterTargetRPMAndKValues=[
        1000, 0.000181,
@@ -45,4 +46,12 @@ bottomShooterWheel{
         1000, 0.000150,
         3000, 0.000170
     ]
+}
+
+angleMotor{
+    inverted=false 
+    hasEncoder=true
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
 }
