Added limit switches for the shooter ShooterAlignment.

--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -10,6 +10,8 @@ topShooterWheel{
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
     runshooterwheelvelocity{
         p=0
         i=0
@@ -32,6 +34,8 @@ bottomShooterWheel{
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
      runshooterwheelvelocity{
         p=0
         i=0
@@ -54,4 +58,6 @@ angleMotor{
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+    hasForwardLimitSwitch=true
+    hasReverseLimitSwitch=true
 }
