Modified code of RealIntake to allow both motors on the intake to be used. Also renamed runIntake to runIntakeWheels, and changed stopIntake to stopIntakeWheels

--- a/src/main/deploy/robotConfigs/TopGun/intake.conf
+++ b/src/main/deploy/robotConfigs/TopGun/intake.conf
@@ -1,6 +1,7 @@
 ports {
     wheelsController=7
-    deployRetract=8
+    deployRetractControllerDriverSide=8
+    deployRetractControllerPassengerSide=13
 }
 
 wheelsController {
@@ -13,7 +14,7 @@ wheelsController {
     hasReverseLimitSwitch=false
 }
 
-deployRetractController {
+deployRetractControllerDriverSide {
     inverted=false
     hasEncoder=true
     encoderInverted=false
@@ -22,6 +23,17 @@ deployRetractController {
     hasForwardLimitSwitch=true
     hasReverseLimitSwitch=true
 }
+
+deployRetractControllerPassengerSide {
+    inverted=false
+    hasEncoder=true
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=true
+    hasForwardLimitSwitch=true
+    hasReverseLimitSwitch=true
+}
+
 
 deploySpeed=0
 retractSpeed=0
