--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -5,7 +5,7 @@ ports{
 }
 
 topShooterWheel{
-    inverted=true     #this has the wheels turning for taking in a ball (should be the default)
+    inverted=false    
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
@@ -29,7 +29,7 @@ topShooterWheel{
 }
 
 bottomShooterWheel{
-    inverted=false    #this has the wheels turning for taking in a ball (should be the default)
+    inverted=true   
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
