--- a/src/main/deploy/robotConfigs/TopGun/feeder.conf
+++ b/src/main/deploy/robotConfigs/TopGun/feeder.conf
@@ -8,4 +8,6 @@ feederController{
     encoderInverted=false
     currentLimit=60
     brakeMode=false
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
 }
