--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -1,3 +1,13 @@
 navx {
     port=MXP
 }
+sensors {
+    cameras {
+        camera0 {
+            port = 0
+            width = 320
+            height = 240
+            fps = 10
+        }
+    }
+}
