Added pid values to the angle motor in shooter config. Removed the reverse flag on the run shooter rpm and tune feed forward because it was unneeded. Deleted RunShooter as it was an unused and unnecessary command. Added the get shooter name method into the shooter alignment files.

--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -60,4 +60,9 @@ angleMotor{
     brakeMode=false
     hasForwardLimitSwitch=true
     hasReverseLimitSwitch=true
+    pValue=0
+    iValue=0
+    dValue=0
+    tolerance=0
+    minOutputToMove=0
 }
