Fixed Encoders on motors on the right side of show bot. Fixed TaxiAuto to schedule commands to run.

--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -27,7 +27,7 @@ backleft {
 frontright {
     inverted=false
     hasEncoder=true
-    encoderInverted=false
+    encoderInverted=true
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
@@ -37,7 +37,7 @@ frontright {
 backright {
     inverted=false
     hasEncoder=true
-    encoderInverted=false
+    encoderInverted=true
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
