Added tuned values to the shooter angle config. Began Debug of ShooterAlignment.

--- a/src/main/deploy/robotConfigs/TopGun/feeder.conf
+++ b/src/main/deploy/robotConfigs/TopGun/feeder.conf
@@ -1,8 +1,8 @@
 ports{
-    feederController=9
+    feederMotor=9
 }
 
-feederController{
+feederMotor{
     inverted=false
     hasEncoder=true
     encoderInverted=false
