--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -1,13 +1,11 @@
 navx {
     port=MXP
 }
-sensors {
-    cameras {
-        camera0 {
-            port = 0
-            width = 320
-            height = 240
-            fps = 10
-        }
-    }
-}
+#sensors {
+ #   cameras {
+  #         port = 0
+   #         width = 320
+    #        height = 240
+     ##  }
+   # }
+#}
