Added the limit switches for the climber, and added the smart dashboard entries.

--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -9,6 +9,9 @@ backLeftWinch {
     encoderInverted = false
     currentLimit = 60
     brakeMode = true
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+
 
 }
 
@@ -18,7 +21,8 @@ backRightWinch {
     encoderInverted = false
     currentLimit = 60
     brakeMode = true
-    
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
 }
 extendHeight = 12
-contractHeight = 6 
+contractHeight = 6  
