Changed ShootCargo to use a parallel deadline group so that the feeder keeps the cargo at the back of the shooter until we are at the shooting angle. In all shoot location files, added the setpoints and angles for low. Added shoot backwards variable for the tarmac in auto. Changed DeployAndRunIntake to only deploy the intake when intaking balls (not for spitting out). Cleaned up the shooter buttons. Added camera back into config file.

--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -1,11 +1,10 @@
 navx {
     port=MXP
 }
-#sensors {
- #   cameras {
-  #         port = 0
-   #         width = 320
-    #        height = 240
-     ##  }
-   # }
-#}
+sensors {
+    cameras {
+           port = 0
+            width = 320
+            height = 240
+        }
+}
