Fixed the sensors.conf to correctly see camera0.

--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -3,8 +3,11 @@ navx {
 }
 sensors {
     cameras {
-           port = 0
+        camera0 {
+            port = 0
             width = 320
             height = 240
+            fps = 10
         }
+    }
 }
