Fixed Timer. Created two MockShooter Subystems so that the parallel command would not crash. AHighHub2 works.

--- a/src/main/deploy/robotConfigs/ShowBot/shooter.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/shooter.conf
@@ -52,7 +52,31 @@ bottomShooterWheel{
     ]
 }
 
-mockShooter{
+mockTopShooter{
+    inverted=true   
+    hasEncoder=true
+    encoderInverted=false
+    currentLimit=60
+    brakeMode=false
+    hasForwardLimitSwitch=false
+    hasReverseLimitSwitch=false
+     runshooterwheelvelocity{
+        p=0
+        i=0
+        d=0
+     }
+    tolerance=100
+    shooterTargetRPMAndKValues=[
+       1000, 0.000181,
+       3000, 0.000176
+    ]
+    shooterTargetRPMandPValues=[
+        1000, 0.000150,
+        3000, 0.000170
+    ]
+}
+
+mockBottomShooter{
     inverted=true   
     hasEncoder=true
     encoderInverted=false
