Changed the buttons for climbing to run the commands while held down instead of when pressed. Fixed and reassigned the limit switches for the climber. Debugged extend and contract commands, still more to be done however.

--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -9,19 +9,17 @@ backLeftWinch {
     encoderInverted = false
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = false
+    hasForwardLimitSwitch = true
     hasReverseLimitSwitch = false
-
-
 }
 
 backRightWinch {
-    inverted = true
+    inverted = false
     hasEncoder = true
     encoderInverted = false
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = false
+    hasForwardLimitSwitch = true
     hasReverseLimitSwitch = false
 }
 extendHeight = 12
