Climber updates: set encoder winch zero, set to full speed, printed encoder values to smart dashboard

--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -22,5 +22,5 @@ backRightWinch {
     hasForwardLimitSwitch = true
     hasReverseLimitSwitch = false
 }
-extendHeight = 12
+maxExtendHeight = 12
 contractHeight = 6  
