--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -6,7 +6,7 @@ ports {
 backLeftWinch {
     inverted = true
     hasEncoder = true
-    encoderInverted = false
+    encoderInverted = true
     currentLimit = 60
     brakeMode = true
     hasForwardLimitSwitch = true
@@ -16,11 +16,11 @@ backLeftWinch {
 backRightWinch {
     inverted = false
     hasEncoder = true
-    encoderInverted = false
+    encoderInverted = true
     currentLimit = 60
     brakeMode = true
     hasForwardLimitSwitch = true
     hasReverseLimitSwitch = false
 }
-maxExtendHeight = 12
-contractHeight = 6  
+maxExtendHeight = 143
+contractHeight = 5 
