Lowered the feeder setpoint for the autonomous commands from the feeder setpoint to 0.5. Also tuned more values for the autonomous commands (BHighHub2 cargo wait time to 2500 from 3500, Added new terminal wait time and adjusted move distance to terminal from 152 to 153). Adjusted the ShootCargo command to go back to the feeder setpoint instead of 0.5

--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -9,5 +9,11 @@ sensors {
             height = 240
             fps = 10
         }
+        camera1 {
+            port = 1
+            width = 320
+            height = 240
+            fps = 10
+        }
     }
 }
