--- a/src/main/deploy/robotConfigs/TopGun/feeder.conf
+++ b/src/main/deploy/robotConfigs/TopGun/feeder.conf
@@ -7,7 +7,7 @@ feederMotor{
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
-    brakeMode=false
+    brakeMode=true
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
 }
