Fixed issue with SlowMidFastModeStates crashing robot when shifting between slow, mid, and fast mode. Note: Confirmed to work on romi.

--- a/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
@@ -23,8 +23,10 @@ gyrocorrect {
     kproportion=0.022
 }
 teleop {
-    forwardbackslowscale = 0.4
-    rotateslowscale = 0.4
+    slowmodefowardbackscale = 0.25
+    slowmoderotatescale = 0.5
+    midmodefowardbackscale = 0.5
+    midmoderotatescale = 0.75
     kdelay=8
     kproportion = 0.022
 }
