fix romi and showbot configs so the new slow/mid drive modes don't crash the code

--- a/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
@@ -16,8 +16,10 @@ gyrocorrect {
     kproportion=0.035
 }
 teleop {
-    forwardbackslowscale = 0.5
-    rotateslowscale = 0.5
+    slowmodefowardbackscale = 0.5
+    slowmoderotatescale = 0.5
+    midmodefowardbackscale = 0.75
+    midmoderotatescale = 0.75
     kdelay=15
     kproportion=0.07
 }
