--- a/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi3/drivetrain.conf
@@ -23,8 +23,10 @@ gyrocorrect {
     kproportion=0.03
 }
 teleop {
-    forwardbackslowscale = 0.3 
-    rotateslowscale = 0.5 
+    slowmodefowardbackscale = 0.5
+    slowmoderotatescale = 0.5
+    midmodefowardbackscale = 0.75
+    midmoderotatescale = 0.75
     controllerDeadband = 0.01
     kdelay=15
     kproportion = 0.03
