--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -48,8 +48,10 @@ gyrocorrect {
     kproportion=0.025
 }
 teleop {
-    forwardbackslowscale = 0.75
-    rotateslowscale = 0.5
+    slowmodefowardbackscale = 0.5
+    slowmoderotatescale = 0.5
+    midmodefowardbackscale = 0.75
+    midmoderotatescale = 0.75
     kdelay=25
     kproportion=0.025
 }
