add ability to get servomotor parameters from config file

--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -81,8 +81,14 @@ angleMotor{
 
 leftServoMotor{
     port=3
+    maxPWMpulseWidthMS=2.5
+    centerPWMpusleWithMS=1.5
+    minPWMpulseWidthMS=0.5
 }
 
 rightServoMotor{
     port=4
+    maxPWMpulseWidthMS=2.5
+    centerPWMpusleWithMS=1.5
+    minPWMpulseWidthMS=0.5
 }
