--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -79,16 +79,11 @@ angleMotor{
     minOutputToMove=0.1
 }
 
-leftServoMotor{
+hooksServoMotor{
     port=3
-    maxPWMpulseWidthMS=2.5
-    centerPWMpusleWithMS=1.5
-    minPWMpulseWidthMS=0.5
-}
-
-rightServoMotor{
-    port=4
-    maxPWMpulseWidthMS=2.5
-    centerPWMpusleWithMS=1.5
-    minPWMpulseWidthMS=0.5
+    maxPWMpulseWidthMS=2.4
+    deadbandMax=0.0
+    centerPWMpusleWithMS=0.0
+    deadbandMin=0.0
+    minPWMpulseWidthMS=0.6
 }
