Took out the limit switch code for climber and adjusted more values.

--- a/src/main/deploy/robotConfigs/TopGun/climber.conf
+++ b/src/main/deploy/robotConfigs/TopGun/climber.conf
@@ -9,7 +9,7 @@ backLeftWinch {
     encoderInverted = true
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = true
+    hasForwardLimitSwitch = false
     hasReverseLimitSwitch = false
 }
 
@@ -19,8 +19,8 @@ backRightWinch {
     encoderInverted = true
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = true
+    hasForwardLimitSwitch = false
     hasReverseLimitSwitch = false
 }
-maxExtendHeight = 143
-contractHeight = 5 
+maxExtendHeight = 202
+contractHeight = 2.5
