--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     }
   ],
   "editor.minimap.enabled": false,
+  "editor.tabSize": 2,
   "java.test.config": [
     {
       "name": "WPIlibUnitTests",
