Inverted drivetrain controls for ShowBot

--- a/src/main/deploy/robotConfigs/ShowBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/sensors.conf
@@ -7,6 +7,10 @@ sensors {
         ping=3
         echo=4
     }
+    cannonElevationEncoder{
+        aChannel = 0
+        bChannel = 1
+    }
 }
 navx {
     port=MXP
