Added the cannon home switch and put it on the dashboard. The elevator moves up and down.

--- a/src/main/deploy/robotConfigs/ShowBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/sensors.conf
@@ -1,7 +1,7 @@
 sensors {
     cannonHomeSwitch{
         port=2
-        reversedPolarity=false
+        reversedPolarity=true
     }
     cannonSafetyUltrasonic{
         ping=3
