--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
-import edu.wpi.first.gradlerio.deploy.roborio.RoboRIO
-
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2022.4.1"
-    id "com.diffplug.spotless" version "6.1.2"
+    id "edu.wpi.first.GradleRIO" version "2023.1.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -46,10 +43,10 @@ def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 wpi.java.debugJni = false
 
 // Set this to true to enable desktop support.
-def includeDesktopSupport = true
+def includeDesktopSupport = false
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
-// Also defines JUnit 4.
+// Also defines JUnit 5.
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
@@ -68,23 +65,19 @@ dependencies {
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
 
-    // https://mvnrepository.com/artifact/com.typesafe/config
-    implementation 'com.typesafe:config:1.4.1'
-    implementation 'org.apache.commons:commons-math3:3.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-junit-jupiter:3.6.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-migrationsupport:5.6.2"
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
+
+test {
+    useJUnitPlatform()
+    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
 }
 
 // Simulation configuration (e.g. environment variables).
 wpi.sim.addGui().defaultEnabled = true
 wpi.sim.addDriverstation()
-
-//Sets the websocket client remote host.
-wpi.sim.envVar("HALSIMWS_HOST", "10.49.5.2")
-wpi.sim.addWebsocketsServer().defaultEnabled = true
-wpi.sim.addWebsocketsClient().defaultEnabled = true
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
@@ -100,18 +93,7 @@ deployArtifact.jarTask = jar
 wpi.java.configureExecutableTasks(jar)
 wpi.java.configureTestTasks(test)
 
-spotless {
-  format 'misc', {
-    target '*.gradle', '*.md', '.gitignore'
-
-    trimTrailingWhitespace()
-    indentWithSpaces(2) // or spaces. Takes an integer argument if you don't like 4
-    endWithNewline()
-  }
-  java {
-
-    importOrder 'java', 'javax', 'org', 'com', 'com.diffplug', ''      // A sequence of package names
-    removeUnusedImports() // removes any unused imports
-    eclipse().configFile 'frc4905.eclipseformat.xml'   // XML file dumped out by the Eclipse formatter
-  }
+// Configure string concat to always inline compile
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add '-XDstringConcat=inline'
 }
