Added a fast mode so that we can specify what the max speed the robot moves is.

--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -52,6 +52,8 @@ teleop {
     slowmoderotatescale = 0.5
     midmodefowardbackscale = 0.75
     midmoderotatescale = 0.75
+    fastmodefowardbackscale = 1.0
+    fastmoderotatescale = 1.0
     kdelay=25
     kproportion=0.025
 }
