--- a/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
@@ -48,10 +48,12 @@ gyrocorrect {
     kproportion=0.025
 }
 teleop {
-    slowmodefowardbackscale = 0.5
-    slowmoderotatescale = 0.5
-    midmodefowardbackscale = 0.75
-    midmoderotatescale = 0.75
+    slowmodefowardbackscale = 0.35
+    slowmoderotatescale = 0.35
+    midmodefowardbackscale = 0.5
+    midmoderotatescale = 0.5
+    fastmodefowardbackscale = 0.75
+    fastmoderotatescale = 0.75
     kdelay=25
     kproportion=0.025
 }
