--- a/src/main/deploy/robotConfigs/SAM/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SAM/commandconstants.conf
@@ -21,3 +21,10 @@ BalanceRobot {
     minOutputToMove = 0.075
     tolerance = 1
 }
+ArmExtRet {
+    Kp = 0.01
+    Ki = 0
+    Kd = 0
+    minOutputToMove = 0
+    tolerance = 1
+}
