Set up limit switches for arm rotation.

--- a/src/main/deploy/robotConfigs/SAM/sensors.conf
+++ b/src/main/deploy/robotConfigs/SAM/sensors.conf
@@ -1,3 +1,23 @@
+sensors {
+    retractLimitSwitch{
+        port=0
+        reversedPolarity=false
+    }
+    frontAngleLimitSwitch{
+        port=1
+        reversedPolarity=false
+    }
+    backAngleLimitSwitch{
+        port=2
+        reversedPolarity=false
+    }
+    straightUpLimitSwitch{
+        port=3
+        reversedPolarity=false 
+    }
+}
+
 navx {
     port=MXP
 }
+
