--- a/src/main/deploy/robotConfigs/SAM/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SAM/commandconstants.conf
@@ -28,3 +28,10 @@ ArmExtRet {
     minOutputToMove = 0
     tolerance = 1
 }
+ArmRotate {
+    Kp = 0.01
+    Ki = 0
+    Kd = 0
+    minOutputToMove = 0
+    tolerance = 1
+}
