Began adding functions to activate robot brakes.

--- a/src/main/deploy/robotConfigs/SAM/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/SAM/drivetrain.conf
@@ -58,6 +58,22 @@ teleop {
     kproportion=0.025
 }
 
+leftbrakeservomotor{
+    port = 8
+    maxPWMpulseWidthMS = 2.4
+    deadbandMax = 0.0
+    centerPWMpusleWithMS = 0.0
+    deadbandMin = 0.0
+    minPWMpulseWidthMS = 0.6
+}
+rightbrakeservomotor{
+    port = 9
+    maxPWMpulseWidthMS = 2.4
+    deadbandMax = 0.0
+    centerPWMpusleWithMS = 0.0
+    deadbandMin = 0.0
+    minPWMpulseWidthMS = 0.6
+}
 rightSideInverted=false
 ticksPerInch=29.4
 motorController=sparkMax
