Worked on brakes. Coded back button for brake. Not tested.

--- a/src/main/deploy/robotConfigs/SAM/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/SAM/drivetrain.conf
@@ -74,6 +74,8 @@ rightbrakeservomotor{
     deadbandMin = 0.0
     minPWMpulseWidthMS = 0.6
 }
+brakeengaged=0.75
+brakedisengage=0.45
 rightSideInverted=false
 ticksPerInch=29.4
 motorController=sparkMax
