Finished adding gripper/arm code to the autonomous commands. Adjusted distance values for autonomous commands. Added cameras for SAM.

--- a/src/main/deploy/robotConfigs/SAM/sensors.conf
+++ b/src/main/deploy/robotConfigs/SAM/sensors.conf
@@ -21,3 +21,20 @@ navx {
     port=MXP
 }
 
+sensors {
+    cameras {
+        camera0 {
+            port = 0
+            width = 320
+            height = 240
+            fps = 8
+        }
+        camera1 {
+            port = 1
+            width = 320
+            height = 240
+            fps = 8
+        }
+    }
+}
+
