Initial code for arm rotation brake. Not tested.

--- a/src/main/deploy/robotConfigs/SAM/armrotate.conf
+++ b/src/main/deploy/robotConfigs/SAM/armrotate.conf
@@ -1,5 +1,11 @@
 ports {
   motor1 = 5
+
+  solenoidbrake {
+    forwardChannel = 2
+    reverseChannel = 3
+  }
+
 }
 
 motor1 {
@@ -12,6 +18,7 @@ motor1 {
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
 }
+
 
 motorController=sparkMax
 
