Tested the arm rotate and arm extend commands. Took out unused code that initializes the arm extension. Added the compressor to SAM.

--- a/src/main/deploy/robotConfigs/SAM/armextension.conf
+++ b/src/main/deploy/robotConfigs/SAM/armextension.conf
@@ -5,7 +5,7 @@ ports {
 extensionmotor {
   inverted=true
     hasEncoder=true
-    encoderInverted=false
+    encoderInverted=true
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
@@ -15,6 +15,6 @@ extensionmotor {
 
 motorController=sparkMax
 
-maxExtension = 1
+maxExtension = 5000
 
-minExtension = 1
+minExtension = 0
