--- a/src/main/deploy/robotConfigs/SAM/sensors.conf
+++ b/src/main/deploy/robotConfigs/SAM/sensors.conf
@@ -21,20 +21,18 @@ navx {
     port=MXP
 }
 
-sensors {
-    cameras {
-        camera0 {
-            port = 0
-            width = 320
-            height = 240
-            fps = 8
-        }
-        camera1 {
-            port = 1
-            width = 320
-            height = 240
-            fps = 8
-        }
-    }
-}
+##  cameras {
+  ##      camera0 {
+   ##         port = 0
+    ##        width = 320
+     ##       height = 240
+      ##      fps = 8
+      ##  }
+      ##  camera1 {
+       ##   width = 320
+        ##    height = 240
+        ##    fps = 8
+      ##  }
+   ## }
+## }
 
