Flipped the extension motor to run in the right direction. Moved requirements to after the super.

--- a/src/main/deploy/robotConfigs/SAM/armextension.conf
+++ b/src/main/deploy/robotConfigs/SAM/armextension.conf
@@ -3,9 +3,9 @@ ports {
 }
 
 extensionmotor {
-  inverted=true
+  inverted=false
     hasEncoder=true
-    encoderInverted=true
+    encoderInverted=false
     currentLimit=60
     brakeMode=true
     encoderTicksPerRotation=42
