--- a/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi4/drivetrain.conf
@@ -23,12 +23,14 @@ gyrocorrect {
     kproportion=0.022
 }
 teleop {
-    slowmodefowardbackscale = 0.5
-    slowmoderotatescale = 0.5
+    slowmodefowardbackscale = 0.45
+    slowmoderotatescale = 0.45
     midmodefowardbackscale = 0.75
     midmoderotatescale = 0.75
-    kdelay=8
-    kproportion = 0.022
+    fastmodefowardbackscale = 1
+    fastmoderotatescale = 1
+    kdelay=25
+    kproportion=0.025
 }
 
 pathplanningconstants {
