--- a/src/main/deploy/robotConfigs/4905_Romi/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi/commandconstants.conf
@@ -1,5 +1,5 @@
 GyroPIDCommands {
-    TurningPTerm=0.0025
+    TurningPTerm=0.005
     TurningITerm=0
     TurningDTerm=0
     minOutputToMove=0.08
@@ -26,4 +26,12 @@ ColorSensorBack {
     i = 0.0
     d = 0.035
     setpoint = 3.86
+}
+
+BalanceRobot {
+    Kp = 0.01
+    Ki = 0.001
+    Kd = 0
+    minOutputToMove = 0.075
+    tolerance = 1
 }
