--- a/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/4905_Romi/drivetrain.conf
@@ -20,8 +20,10 @@ teleop {
     slowmoderotatescale = 0.5
     midmodefowardbackscale = 0.75
     midmoderotatescale = 0.75
-    kdelay=15
-    kproportion=0.07
+    fastmodefowardbackscale = 1
+    fastmoderotatescale = 1
+    kdelay=8
+    kproportion=0.077
 }
 pathplanningconstants {
     ksVolts = 0.929
