tuning and turn off limelight

--- a/src/main/deploy/robotConfigs/TopGun/sensors.conf
+++ b/src/main/deploy/robotConfigs/TopGun/sensors.conf
@@ -17,3 +17,8 @@ sensors {
         }
     }
 }
+limelight {
+    cameraHeight = 31
+    cameraAngleRadians = 0.017
+    cameraDistToFrame = 20.00
+}
