--- a/src/main/deploy/robotConfigs/SAM/armrotate.conf
+++ b/src/main/deploy/robotConfigs/SAM/armrotate.conf
@@ -9,7 +9,7 @@ ports {
 }
 
 motor1 {
-  inverted=true
+  inverted=false
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
@@ -25,3 +25,15 @@ motorController=sparkMax
 maxAngle = 291
 
 minAngle = 69
+
+armKValues = [
+  70, 0.04,
+  90, 0.03,
+  113, 0.125,
+  124, 0.2,
+  180, 0,
+  234, -0.15,
+  242, -0.1,
+  270, -0.025,
+  289, -0.025
+]
