Created the brake for the arm extension.

--- a/src/main/deploy/robotConfigs/SAM/armextension.conf
+++ b/src/main/deploy/robotConfigs/SAM/armextension.conf
@@ -13,6 +13,12 @@ extensionmotor {
     hasReverseLimitSwitch=true
 }
 
+extensionbrake {
+  port = 2
+  extensionbrakeopen = 0.50
+  extensionbrakeclosed = 0.25
+}
+
 motorController=sparkMax
 
 maxExtension = 45
