Added the elevator switch

--- a/src/main/deploy/robotConfigs/ShowBot/cannon.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/cannon.conf
@@ -1,4 +1,4 @@
- ports {
+ports {
     solenoid0_7 {
         forwardChannel=7
         reverseChannel=0
@@ -22,3 +22,4 @@ elevationMotor {
     brakeMode=true
     inverted=true
 }
+contactswitch = 2
