--- a/src/main/deploy/robotConfigs/ShowBot/robot.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/robot.conf
@@ -5,7 +5,10 @@ subsystems{
     compressor {
       
     }
-    cannon{
+    showBotCannon{
+      
+    }
+    showBotAudio {
       
     }
   }
