Finished adding constants to swerve configuration and fixed errors. Need to convert swerve module.

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -1,8 +1,8 @@
 SwerveDriveConstants {
   invertGyro=true
-  Center to Center distance of left and right modules in inches. 
+  #Center to Center distance of left and right modules in inches. 
   trackWidth=24
-  wheelBase: Center to Center distance of front and rear module wheels in meters.
+  #wheelBase: Center to Center distance of front and rear module wheels in meters.
   wheelBase=24
   wheelDiameter=4.0
   wheelCircumference=1.2732395447
