Added constants to swerve module, tested and it works as expected.

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -8,6 +8,7 @@ SwerveDriveConstants {
   wheelCircumference=1.2732395447
   driveGearRatio=6.75 # 6.75/1
   angleGearRatio=1
+  angleDegreesPerRotation = 360 
   voltageComp=12
   angleContinuousCurrentLimit=20
   driveContinuousCurrentLimit=60
@@ -34,6 +35,7 @@ SwerveDriveConstants {
 
   driveInvert = false 
   angleInvert = true 
+  absoluteAngleEncoderInvert = true 
 
   Mod0 {
     driveMotorID = 8
