Changed the BillEndEffectorPivot to BillEndEffectorPosition - Also put config stuff into subsystemscontainer

--- a/src/main/deploy/robotConfigs/Billthoven/robot.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/robot.conf
@@ -1,11 +1,11 @@
 subsystems {
-  billArmPivot {
+  billArmRotate {
 
   }
   billClimber {
 
   }
-  billEndEffectorPivot {
+  billEndEffectorPosition {
 
   }
   billFeeder {
