Fixed kp proportion value and moving using gyro proportion value.

--- a/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
@@ -7,10 +7,11 @@ GyroPIDCommands {
     velocityTolerance=10
 }
 MoveUsingEncoder {
-    Kp = 0.01
+    Kp = 0.00825
     Ki = 0
     Kd = 0
     minOutputToMove = 0
     positionTolerance=0.5
     velocityTolerance=3
 }
+moveUsingGyroP = 0.001
