fixed merge errors

--- a/src/main/deploy/robotConfigs/SwerveBot/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/BlueAutonomous.conf
@@ -32,12 +32,12 @@ CentralSpeaker3Scores{
 
 DriveStation2Speaker{
   #Waypoints and Angles to score R3 Note in Speaker
-  Waypoint1 = 14.5
+  WayPoint1 = 14.5
   Angle1 = 0
-  Waypoint2 = 74 # (81-7)
+  WayPoint2 = 74 # (81-7)
   Angle2 = 23
   # Drive Towards centerline
-  Waypoint3 = 20 # (x) We will figure out this number later
+  WayPoint3 = 20 # (x) We will figure out this number later
   
 }
 
@@ -56,15 +56,15 @@ DriveStation3SpeakerWithAmp{
 
 CentralSpeaker2Scores{
   #Waypoints and Angles to Score R2 Note
-  Waypoint1 = 61.25 # (77 3/4 - 33/2)
+  WayPoint1 = 61.25 # (77 3/4 - 33/2)
   #Waypoints and Angles to pick up C2 Note
   Angle1 = 333.5
-  Waypoint2 = 128.5
+  WayPoint2 = 128.5
   Angle2 = 28.5
-  Waypoint3 = 95
+  WayPoint3 = 95
 }
 
 EmergencyBackup{
   #Waypoints and Angles to move out of starting area
-  Waypoint1 = 75
+  WayPoint1 = 75
 }
